examples/90_Kubernetes/yais-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yais-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yais-example
  template:
    metadata:
      labels:
        app: yais-example
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: yais-example
        image: yais
        command: ["/work/examples/90_Kubernetes/deploy/build-and-run.sh"]
        imagePullPolicy: IfNotPresent # Always
        resources:
          limits:
            nvidia.com/gpu: 1
        ports:
        - name: grpc
          containerPort: 50051
        - name: metrics
          containerPort: 50078
        livenessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 60
          periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: yais-example
  labels:
    app: yais-example
spec:
  selector:
    app: yais-example
  ports:
  - name: grpc
    port: 50051
    targetPort: grpc
  - name: metrics
    port: 50078
    targetPort: metrics
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yais-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "*"
    port:
      name: grpc
      number: 80
      protocol: grpc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yais-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - yais-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: yais-example.default.svc.cluster.local
        port:
          number: 50051
